--- a/book.toml
+++ b/book.toml
@@ -4,4 +4,4 @@ title = "The Rustonomicon"
 description = "The Dark Arts of Advanced and Unsafe Rust Programming"
 
 [output.html]
-git-repository-url = "https://github.com/rust-lang/nomicon"
+git-repository-url = "https://github.com/ywen407/nomicon"
